implements login form

--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,8 @@
           <div class="carousel-item login-carousel-div-item" href="#one!">
             <img src="assets/img/Data.png" alt="Img" />
             <div class="login-carousel-div-item-text">
-              <span>Marcenas mattis egestas</span><br />
+              <span>Marcenas mattis egestas</span>
+              <br />
               <span>
                 Erdum et malesuada fames ac ante ileum primmer in faucibus
                 uspendisse porta.
@@ -34,7 +35,8 @@
           <div class="carousel-item login-carousel-div-item" href="#one!">
             <img src="assets/img/Data.png" alt="Img" />
             <div class="login-carousel-div-item-text">
-              <span>Marcenas mattis egestas</span><br />
+              <span>Marcenas mattis egestas</span>
+              <br />
               <span>
                 Erdum et malesuada fames ac ante ileum primmer in faucibus
                 uspendisse porta.
@@ -45,7 +47,8 @@
           <div class="carousel-item login-carousel-div-item" href="#one!">
             <img src="assets/img/Data.png" alt="Img" />
             <div class="login-carousel-div-item-text">
-              <span>Marcenas mattis egestas</span><br />
+              <span>Marcenas mattis egestas</span>
+              <br />
               <span>
                 Erdum et malesuada fames ac ante ileum primmer in faucibus
                 uspendisse porta.
@@ -56,7 +59,65 @@
       </div>
 
       <!-- Login Form -->
-      <div class="login-form"></div>
+      <div class="login-form">
+        <div class="login-form-title">
+          <h5>Welcome to Invision</h5>
+        </div>
+
+        <div class="login-form-inputsForm">
+          <div class="row">
+            <form class="col s12">
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="email" type="email" class="validate" />
+                  <label for="email">Users name or Email</label>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="password" type="password" class="validate" />
+                  <label for="password">Password</label>
+                </div>
+              </div>
+
+              <div class="row">
+                <a
+                  class="waves-effect waves-teal btn-flat login-form-forgotPass"
+                >
+                  Forgot password?
+                </a>
+              </div>
+
+              <div class="row center-align">
+                <button class="login-form-signinBtn">
+                  Sign in
+                </button>
+              </div>
+
+              <div class="wrapper">
+                <span>Or</span>
+              </div>
+
+              <div class="row center-align">
+                <button class="googleBtn">
+                  <img src="assets/img/Google__G__Logo.svg" alt="" />
+                  <span>Sign in with Google</span>
+                </button>
+              </div>
+
+              <div class="row login-form-newAccount">
+                <span>
+                  New
+                  <b>Invision</b>
+                  ?
+                </span>
+                <a href="#">Create Account</a>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
 
     <script
